--- a/iframe-2.0/lable.html
+++ b/iframe-2.0/lable.html
@@ -22,18 +22,18 @@
 	</div>
 	<!-- 标签搜索群 -->
 	<div class="lableGroup">
-		<button type="button" class="lable-btn" data-id="1">爱情</button>
-		<button type="button" class="lable-btn" data-id="2">战争片</button>
-		<button type="button" class="lable-btn" data-id="3">战争片战争片</button>
-		<button type="button" class="lable-btn" data-id="4">爱情</button>
-		<button type="button" class="lable-btn" data-id="5">战争片</button>
-		<button type="button" class="lable-btn" data-id="6">战争片战争片</button>
-		<button type="button" class="lable-btn" data-id="7">爱情</button>
-		<button type="button" class="lable-btn" data-id="8">战争片</button>
-		<button type="button" class="lable-btn" data-id="9">战争片战争片</button>
-		<button type="button" class="lable-btn" data-id="10">爱情</button>
-		<button type="button" class="lable-btn" data-id="11">战争片</button>
-		<button type="button" class="lable-btn" data-id="12">战争片战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="1">爱情</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="2">战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="3">战争片战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="4">爱情</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="5">战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="6">战争片战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="7">爱情</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="8">战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="9">战争片战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="10">爱情</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="11">战争片</button>
+		<button type="button" class="lable-btn layui-btn-primary" data-id="12">战争片战争片</button>
 	</div>
 	<!--已添加标签-->
 	<div class="lableAdd">
