--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>搜索</p>
-			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe"></iframe>
+			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe" data-id="search0"></iframe>
 		</article>
 
 		<article id="color">
@@ -196,12 +196,6 @@
 			</div>
 		</article>
 		<article id="select">
-<<<<<<< HEAD
-			<p>----- 下拉 -----</p>
-			<div class="layui-form-item layui-inline selectOne">
-				<form class="layui-form" action="">
-					<select name="city" lay-verify="required" class="select-size">
-=======
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
@@ -209,33 +203,21 @@
 			<form class="layui-form" action="">
 				<div class="layui-form-item layui-inline ">
 					<select name="city" lay-verify="required" class="size">
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
 						<option value="">未选择</option>
 						<option value="0">1</option>
 						<option value="1">2</option>
 					</select>
-<<<<<<< HEAD
 				</form>
 			</div>
-			<div class="layui-form-item layui-inline selectTwo">
+			<div class="selectTwo">
 				<form class="layui-form" action="">
 					<select name="city" lay-verify="required" class="select-sizeMin">
-=======
-				</div>
-				<div class="layui-form-item layui-inline">
-					<select name="city" lay-verify="required" class="sizeMin">
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
 						<option value="">未选择</option>
 						<option value="0">1</option>
 						<option value="1">2</option>
 					</select>
-<<<<<<< HEAD
 				</form>
 			</div>
-=======
-				</div>
-			</form>
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
 		</article>
 		<article id="checkbox">
 			<p class="title">
@@ -247,46 +229,38 @@
 			</form>
 		</article>
 		<article id="rule">
-<<<<<<< HEAD
-			<p>----- 法规提示 -----</p>
-			<div class="rule">
-=======
 
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>法规提示</p>
-			<div>
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
+			<div class="rule">
 				请您遵守国家相关规定，切勿上传低俗色情、暴力恐怖、谣言诈骗、侵权盗版等相关内容，火把保有依据国家规定及平台规则进行处理的权利。
 			</div>
 		</article>
 		<article id="pic">
-<<<<<<< HEAD
-			<p>----- 图片比例 -----</p>
-			<div class="pic-one">
-				<img src="" alt="">
-=======
 			<p class="title">
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>图片比例</p>
-			<div style="width: 120px;">
-				<div class="pictureImg"></div>
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
-			</div>
 			<div class="pic-two">
 				<img src="" alt="">
 			</div>
 		</article>
 		<article id="lable">
-			<p>----- 标签 -----</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose"></iframe>
+			<p class="title">
+				<svg class="icon" aria-hidden="true">
+					<use xlink:href="#iconguanlian"></use>
+				</svg>标签</p>
+			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
 		</article>
 		<article id="table">
-			<p>----- 数据表格 -----</p>
-			<iframe src="iframe-2.0/tableOne.html" name="tableOne"></iframe>
-			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo"></iframe>
+			<p class="title">
+				<svg class="icon" aria-hidden="true">
+					<use xlink:href="#iconguanlian"></use>
+				</svg>数据表格</p>
+			<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
+			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
 		</article>
 	</section>
 
@@ -297,12 +271,15 @@
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
+	// iframe当前标识
+	var dataId = '';
+	var dataResult = {};
+
 	//初始化layui
 	layui.use(['element', 'form'], function () {
 		var element = layui.element,
 			form = layui.form,
 			$ = layui.$;
-<<<<<<< HEAD
 
 	})
 
@@ -312,22 +289,34 @@
 		$('iframe[name=lableChoose]').css('height', lableHeight);
 	}
 
+	//接受搜索数据
+	function searchAction(data) {
+		//将搜索传过来的数据反馈到数据表格
+		$('iframe[data-id='+dataId+']')[0].contentWindow.setTable(data);
+	}
+
+
 	//设置数据表格tableOne高度
-	function setTableOneHeight(tableOneHeight){
-		// 设置info模板中相应iframe的高度
-		$('iframe[name=tableOne]').css('height', tableOneHeight);
-	}
+	// function setTableOneHeight(tableOneHeight){
+	// 	// 设置info模板中相应iframe的高度
+	// 	$('iframe[name=tableOne]').css('height', tableOneHeight);
+	// }
 	//设置数据表格tableTwo高度
-	function setTableTwoHeight(tableTwoHeight){
-		// 设置info模板中相应iframe的高度
-		$('iframe[name=tableTwo]').css('height', tableTwoHeight);
+	// function setTableTwoHeight(tableTwoHeight){
+	// 	// 设置info模板中相应iframe的高度
+	// 	$('iframe[name=tableTwo]').css('height', tableTwoHeight);
+	// }
+
+	// 设置iframe当前标识
+	function setIframeDataId(id) {
+		dataId = id;
 	}
-</script>
-=======
-	})
+
+
+
 	//设置iframe高度
 	function setIframeHeight(height) {
 		$('.high-search-iframe').height(height);
 	}
+
 </script>
->>>>>>> 974e52684f35a527d5fd7608886d9694bc75c3dd
