--- a/iframe-2.0/tableOne.html
+++ b/iframe-2.0/tableOne.html
@@ -13,8 +13,8 @@
 	<div class="table">
 		<table class="layui-table" style="table-layout:fixed;margin:0;">
 			<colgroup>
-				<col width="3%">
-				<col width="8%">
+				<col width="50">
+				<col width="138">
 				<col width="6%">
 				<col width="19%">
 				<col width="8%">
@@ -22,7 +22,7 @@
 				<col width="10%">
 				<col width="10%">
 				<col width="12%">
-				<col width="16%">
+				<col>
 			</colgroup>
 			<thead>
 			<tr>
@@ -96,6 +96,52 @@
 
 	//数据表格高度
 	var height;
+
+	// 填充数据
+	function setTable(data) {
+		// $.ajax()
+		setTableArgs (url);
+	}
+
+
+	// url
+	function setTableArgs (url) {
+		//
+		var cols = [];
+		switch(url) {
+			case 'goods':
+				cols = [[
+					{type:'checkbox'}
+					,{field:'id', width:80, title: 'ID', sort: true}
+					,{field:'username', width:80, title: '用户名'}
+					,{field:'sex', width:80, title: '性别', sort: true}
+					,{field:'city', width:80, title: '城市'}
+					,{field:'sign', title: '签名', minWidth: 100}
+					,{field:'experience', width:80, title: '积分', sort: true}
+					,{field:'score', width:80, title: '评分', sort: true}
+					,{field:'classify', width:80, title: '职业'}
+					,{field:'wealth', width:135, title: '财富', sort: true}
+				]]
+				break;
+		}
+
+		getTableData (url, cols);
+	}
+
+	//
+	function getTableData (url, cols) {
+
+		layui.use('table', function(){
+			var table = layui.table;
+
+			table.render({
+				elem: '#test'
+				,url: url
+				,cols: cols
+				,page: true
+			});
+		});
+	}
 
 	//JavaScript代码区域
 	layui.use(['element', 'form'], function() {
