--- a/frame.html
+++ b/frame.html
@@ -144,7 +144,18 @@
         </div>
 
         <!-- 底部 -->
-        <div class="layui-footer" style="background-color: #ccc;">111</div>
+        <div class="layui-footer">
+            <button class="layui-btn">保存并提交</button>
+            <div class="select-btn-two">
+                <button type="button" class="layui-btn layui-btn-six">按钮6<i class="layui-icon layui-icon-down"></i><i
+                        class="layui-icon layui-icon-up"></i></button>
+                <dl class="select-btn-upbit">
+                    <dd class="select-btn-tips select-btn-this">立即上架</dd>
+                    <dd class="select-btn-tips">选项二</dd>
+                    <dd class="select-btn-tips">选项三</dd>
+                </dl>
+            </div>
+        </div>
     </div>
 </body>
 
