--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 		<a href="#color">颜色</a>
 		<a href="#tab">选项卡</a>
 		<a href="#layout">表单布局</a>
+		<a href="#popup">弹窗</a>
 	</menu>
 	<header id="header">前端开发规范手册</header>
 	<section>
@@ -131,8 +132,9 @@
 
 				<div class="input-second-container">
 					<input type="text" name="title" placeholder="输入搜索关键字" autocomplete="off" class="layui-input">
-					<div class="input-number"><span class="input-on-number">0</span>/<span
-							class="input-max-number">100</span></div>
+					<div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">100
+							</spani>
+					</div>
 				</div>
 				<p class="subTitle">文本域3</p>
 				<div class="input-third-container">
@@ -146,7 +148,8 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>搜索</p>
-			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe" data-id="search0"></iframe>
+			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe"
+				data-id="search0"></iframe>
 		</article>
 		<article id="color">
 			<p class="title">
@@ -202,7 +205,7 @@
 						<option value="0">1</option>
 						<option value="1">2</option>
 					</select>
-				</form>
+			</form>
 			</div>
 			<div class="selectTwo">
 				<form class="layui-form" action="">
@@ -269,21 +272,30 @@
 					</div>
 				</div>
 			</form>
-		<article id="lable">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>标签</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
-		</article>
-		<article id="table">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>数据表格</p>
-			<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
-			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
-		</article>
+			<article id="lable">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>标签</p>
+				<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
+			</article>
+			<article id="table">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>数据表格</p>
+				<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
+				<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
+			</article>
+			<article id="popup">
+				<!-- 弹窗 -->
+				<div>
+					<span id="popup1">弹窗1</span>
+					<span id="popup2">弹窗2</span>
+					<span id="popup3">弹窗3</span>
+				</div>
+			</article>
+
 	</section>
 
 </body>
@@ -298,15 +310,22 @@
 	var dataResult = {};
 
 	//初始化layui
-	layui.use(['element', 'form'], function () {
+	layui.use(['element', 'layer', 'form'], function () {
 		var element = layui.element,
 			form = layui.form,
 			$ = layui.$;
-
 	})
 
+	//弹窗1
+	$("#popup1").click(function () {
+		//默认prompt
+		layer.prompt(function (val, index) {
+			layer.msg('得到了' + val);
+			layer.close(index);
+		});
+	})
 	//设置标签iframe高度
-	function setLableHeight(lableHeight){
+	function setLableHeight(lableHeight) {
 		// 设置info模板中相应iframe的高度
 		$('iframe[name=lableChoose]').css('height', lableHeight);
 	}
@@ -314,7 +333,7 @@
 	//接受搜索数据
 	function searchAction(data) {
 		//将搜索传过来的数据反馈到数据表格
-		$('iframe[data-id='+dataId+']')[0].contentWindow.setTable(data);
+		$('iframe[data-id=' + dataId + ']')[0].contentWindow.setTable(data);
 	}
 
 
@@ -340,5 +359,4 @@
 	function setIframeHeight(height) {
 		$('.high-search-iframe').height(height);
 	}
-
 </script>
