--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 				<svg class="icon" aria-hidden="true">
 					<use xlink:href="#iconguanlian"></use>
 				</svg>搜索</p>
-			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe" data-id="search0"></iframe>
+			<iframe src="iframe-2.0/search.html" name="high-search" class="high-search-iframe"
+				data-id="search0"></iframe>
 		</article>
 		<article id="color">
 			<p class="title">
@@ -202,7 +203,7 @@
 						<option value="0">1</option>
 						<option value="1">2</option>
 					</select>
-				</form>
+			</form>
 			</div>
 			<div class="selectTwo">
 				<form class="layui-form" action="">
@@ -269,21 +270,21 @@
 					</div>
 				</div>
 			</form>
-		<article id="lable">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>标签</p>
-			<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
-		</article>
-		<article id="table">
-			<p class="title">
-				<svg class="icon" aria-hidden="true">
-					<use xlink:href="#iconguanlian"></use>
-				</svg>数据表格</p>
-			<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
-			<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
-		</article>
+			<article id="lable">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>标签</p>
+				<iframe src="iframe-2.0/lable.html" name="lableChoose" data-id="label0"></iframe>
+			</article>
+			<article id="table">
+				<p class="title">
+					<svg class="icon" aria-hidden="true">
+						<use xlink:href="#iconguanlian"></use>
+					</svg>数据表格</p>
+				<iframe src="iframe-2.0/tableOne.html" name="tableOne" data-id="table0"></iframe>
+				<iframe src="iframe-2.0/tableTwo.html" name="tableTwo" data-id="table1"></iframe>
+			</article>
 	</section>
 
 </body>
@@ -303,10 +304,12 @@
 			form = layui.form,
 			$ = layui.$;
 
+			$.ajax
+
 	})
 
 	//设置标签iframe高度
-	function setLableHeight(lableHeight){
+	function setLableHeight(lableHeight) {
 		// 设置info模板中相应iframe的高度
 		$('iframe[name=lableChoose]').css('height', lableHeight);
 	}
@@ -314,7 +317,7 @@
 	//接受搜索数据
 	function searchAction(data) {
 		//将搜索传过来的数据反馈到数据表格
-		$('iframe[data-id='+dataId+']')[0].contentWindow.setTable(data);
+		$('iframe[data-id=' + dataId + ']')[0].contentWindow.setTable(data);
 	}
 
 
