--- a/index.html
+++ b/index.html
@@ -364,11 +364,11 @@
 		//默认prompt
 		layer.prompt({
 			btn: ['修 改', '取 消'],
+			area: ['520px', '228px'], //宽高
+			// move: false, //禁止拖拽
 			success: function (layero, index) {
 				$('.layui-layer-title').text('将当前节目的序号修改为'); //title修改
-				$(".layui-layer-input").attr('placeholder', '默认文本') //input提示修改
-				// $(".layui-layer-prompt").attr('id','layui-layer-prompt')
-				console.log($(".layui-layer-prompt").prop("id"))	
+				$(".layui-layer-input").attr('placeholder', '默认文本') //input placeholder提示修改
 			},
 			yes: function (index, layero) {
 				//按钮修改的回调
@@ -387,6 +387,8 @@
 		//询问框
 		layer.alert('确定要删除此节目吗？删除后将无法恢复。', {
 			btn: ['删 除', '取 消'],
+			area: ['430px', '228px'], //宽高
+			// move: false, //禁止拖拽
 			yes: function (index, layero) {
 				//按钮删除的回调
 				// layer.close(index); //如果设定了yes回调，需进行手工关闭
@@ -403,11 +405,12 @@
 		//页面层
 		layer.open({
 			type: 1,
-			title: '选择纸质书',
+			title: '选择纸质书',//title设置
 			skin: 'layui-layer-rim', //加上边框
-			area: ['488px', '180px'], //临时宽高
-			btn: ['删 除', '取 消'], //临时按钮
-			content: 'html内容', //临时内容
+			area: ['488px', '180px'], //宽高
+			content: 'html内容', //内容
+			shadeClose: true,//点击遮罩层隐藏弹窗
+			// move: false, //禁止拖拽
 			yes: function (index, layero) {
 				//按钮1回调
 				// layer.close(index); //如果设定了yes回调，需进行手工关闭
