--- a/iframe-2.0/tableOne.html
+++ b/iframe-2.0/tableOne.html
@@ -78,7 +78,7 @@
 				<td style="text-align:center;">211155</td>
 				<td style="text-align:center;">J40045467</td>
 				<td style="text-align:center;">2019-02-06 15:05:16</td>
-				<td style="text-align:center;">
+				<td style="text-align:center;white-space: nowrap;">
 					<button type="button" class="layui-btn layui-btn-five">链接</button>
 					<button type="button" class="layui-btn layui-btn-five">编辑</button>
 				</td>
