--- a/iframe-2.0/tableTwo.html
+++ b/iframe-2.0/tableTwo.html
@@ -54,7 +54,7 @@
 				</td>
 				<td style="text-align:center;">￥76.20</td>
 				<td style="text-align:center;">211155</td>
-				<td style="text-align:center;">
+				<td style="text-align:center;white-space: nowrap;">
 					<button type="button" class="layui-btn layui-btn-five">编辑</button>
 					<button type="button" class="layui-btn layui-btn-five">删除</button>
 				</td>
