--- a/daifashangpinxiangqing.html
+++ b/daifashangpinxiangqing.html
@@ -164,7 +164,7 @@
 </body>
 
 </html>
-<script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/js/layui.js"></script>
 <script type="text/javascript">
     layui.use(['element', 'jquery'], function () {
         var $ = layui.jquery,
