--- a/iframe-2.0/lable.html
+++ b/iframe-2.0/lable.html
@@ -78,7 +78,7 @@
 </body>
 
 </html>
-<script type="text/javascript" src="../layui-2.0/layui.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/layui.js"></script>
 <script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="../layui-2.0/public.js"></script>
 <script type="text/javascript" src="../layui-2.0/inputtags/inputTags.js"></script>
