--- a/iframe-2.0/search.html
+++ b/iframe-2.0/search.html
@@ -87,7 +87,7 @@
 </body>
 
 </html>
-<script type="text/javascript" src="../layui-2.0/layui.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/layui.js"></script>
 <script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript">
 	var data = {};
