--- a/jiemuguanli.html
+++ b/jiemuguanli.html
@@ -529,7 +529,7 @@
 </body>
 
 </html>
-<script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/js/layui.js"></script>
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/drag-arrange.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
