--- a/jiemushangchuan.html
+++ b/jiemushangchuan.html
@@ -288,7 +288,7 @@
 </body>
 
 </html>
-<script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/js/layui.js"></script>
 <script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script src="layui-2.0/webuploader/webuploader.nolog.min.js"></script>
 <script type="text/javascript" src="layui-2.0/public.js"></script>
