--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
 
 </html>
 <script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
-<script type="text/javascript" src="layui-2.0/public.js"></script>
+<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/js/public.js"></script>
 <script type="text/javascript">
 	// iframe当前标识
 	var dataId = '';
