--- a/jiemuguanli.html
+++ b/jiemuguanli.html
@@ -530,9 +530,9 @@
 
 </html>
 <script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/drag-arrange.js"></script>
-<script type="text/javascript" src="layui-2.0/public.js"></script>
+<script type="text/javascript" src="layui-2.0/js/public.js"></script>
 <script type="text/javascript">
     //节目点击修改窗
     var etcClickUpdate = '<div class="etcClick etcNone"><div class="etcClick-title">节目标题</div><div class="input-second-container customize"><input type="text" name="etcUser" placeholder="输入节目标题" autocomplete="off" class="layui-input"><div class="input-number"><span class="input-on-number">0</span>/<span class="input-max-number">35</span></div></div><div class="etcClick-show">免费试听试看</div><input type="checkbox" name="isPlay" lay-skin="switch" lay-filter="isPlay" class="isChecked"><div class="etcBtn"><button type="button" class="layui-btn layui-btn-normal updateSort">调整顺序</button><button type="button" class="layui-btn layui-btn-danger deleteEtc">删除该节目</button></div></div>'
