--- a/zhuanjixinjian.html
+++ b/zhuanjixinjian.html
@@ -300,8 +300,8 @@
 
 </html>
 <script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
-<script type="text/javascript" src="layui-2.0/public.js"></script>
+<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/js/public.js"></script>
 <script type="text/javascript">
     layui.use(['upload', 'form'], function () {
         var upload = layui.upload,
