--- a/iframe-2.0/lable.html
+++ b/iframe-2.0/lable.html
@@ -79,8 +79,8 @@
 
 </html>
 <script type="text/javascript" src="../layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
-<script type="text/javascript" src="../layui-2.0/public.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/jquery3.4.1.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/public.js"></script>
 <script type="text/javascript" src="../layui-2.0/inputtags/inputTags.js"></script>
 <script type="text/javascript">
 	//标签标示id
