--- a/iframe-2.0/tableOne.html
+++ b/iframe-2.0/tableOne.html
@@ -90,8 +90,8 @@
 
 </html>
 <script type="text/javascript" src="../layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="../layui-2.0/jquery3.4.1.js"></script>
-<script type="text/javascript" src="../layui-2.0/public.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/jquery3.4.1.js"></script>
+<script type="text/javascript" src="../layui-2.0/js/public.js"></script>
 <script type="text/javascript">
 
 	//数据表格高度
