--- a/jiemushangchuan.html
+++ b/jiemushangchuan.html
@@ -289,9 +289,9 @@
 
 </html>
 <script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
-<script src="layui-2.0/webuploader/webuploader.nolog.min.js"></script>
-<script type="text/javascript" src="layui-2.0/public.js"></script>
+<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
+<script src="layui-2.0/js/webuploader/webuploader.nolog.min.js"></script>
+<script type="text/javascript" src="layui-2.0/js/public.js"></script>
 <script type="text/javascript">
 
     //全局上传失败
