--- a/zhuanjiliebiao.html
+++ b/zhuanjiliebiao.html
@@ -250,10 +250,10 @@
 </body>
 
 </html>
-<script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
 <script type="text/javascript" src="layui-2.0/drag-arrange.js"></script>
-<script type="text/javascript" src="layui-2.0/js/public.js"></script>
+<script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
     //初始化layui
     layui.use(['element', 'form', 'laypage'], function () {
