--- a/zhuanjixinjian.html
+++ b/zhuanjixinjian.html
@@ -299,9 +299,9 @@
 </body>
 
 </html>
-<script type="text/javascript" src="layui-2.0/js/layui.js"></script>
-<script type="text/javascript" src="layui-2.0/js/jquery3.4.1.js"></script>
-<script type="text/javascript" src="layui-2.0/js/public.js"></script>
+<script type="text/javascript" src="layui-2.0/layui.js"></script>
+<script type="text/javascript" src="layui-2.0/jquery3.4.1.js"></script>
+<script type="text/javascript" src="layui-2.0/public.js"></script>
 <script type="text/javascript">
     layui.use(['upload', 'form'], function () {
         var upload = layui.upload,
